	mc-devel.
	* view.c (view_move_down): Do nothing if we're already at the
	end of the file. This makes the cursor movement more consistent
	with the behavior of the <End> key.
	* view.c (regexp_search_cmd): Moved the code to save the changes
	of the hex editor out of this function. Whoever wrote that
	should be blamed for it, but the code has been there since the
	beginning.

2005-08-16  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_percent): Fixed coordinate computation.
	* view.c (view_place_cursor): Made the call to widget_move()
	look like the other calls.
	* view.c (view_init_growbuf): Mark the first page full instead
	of empty. This saves one condition in view_growbuf_read_until().

2005-08-15  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_growbuf_read_until): When using mc_read, recover
	from interrupted system calls.
	* view.c (toggle_hex_mode): Now the hex cursor is always visible
	after switching to hex mode.
	* view.c (view_ccache_lookup): Rewrote the calculation of the
	cache entry. Also don't put entries in the cache when the
	current byte is '\r'.
	* view.c (view_ccache_dump): Extended the output by the offset
	of the next line.
	* dialog.h (struct Dlg_head): Changed the bit fields of length one
	from signed int to unsigned int.
	* wtools.h: Replaced 0 with LISTBOX_APPEND_AT_END.
	* achown.c: Likewise.
	* view.c (view_toggle_ruler): Don't mix enums with ints.
	* complete.c (fetch_hosts): Removed unused variable.
	* complete.c: Don't mix enums with ints.
	* tree.c: Likewise.
	* screen.c (use_display_format): Removed unused variable.
	* widget.c: Don't mix enums with ints.

2005-08-15  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* view.c: Made the search function interruptible.

2005-08-06  Roland Illig  <roland.illig@gmx.de>

	* textconf.c: Include ecs_char in the list of type
	characteristics that are printed.
	* view.c (view_growbuf_read_until): On short reads, try to read